# tree-sitter-supercollider

./: .gitignore  .tsqueryrc.json  CHANGELOG.md  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  example-file.scd  go.mod  grammar.js  index.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yml
bindings/c/: tree-sitter-supercollider.pc.in  tree-sitter-tree-sitter-supercollider.pc.in
bindings/c/tree_sitter/: tree-sitter-supercollider.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_tree_sitter_supercollider/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterTreeSitterSupercollider/: tree_sitter_supercollider.h
bindings/swift/TreeSitterTreeSitterSupercolliderTests/: TreeSitterTreeSitterSupercolliderTests.swift
queries/: context.scm  folds.scm  highlights.scm  indents.scm  locals.scm  textobjects.scm
src/: binding.cc  grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: classes.txt  collections.txt  comments.txt  conditionals.txt  control_structure.txt  functions.txt  literals.txt  variables.txt  weirdstuff.txt
testfiles/: benjo.scd
