[package]
name = "tree-sitter-supercollider"
description = "supercollider grammar for the tree-sitter parsing library"
version = "0.3.0"
keywords = ["incremental", "parsing", "supercollider"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-supercollider"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.26.5"
tree-sitter-language = "0.1.7"

[build-dependencies]
cc = "1.0"
